# hportfolio

./: README.md  pyproject.toml
res/: main_window.ui
src/hportfolio/: __init__.py  __main__.py  crosshair.py  main_window.py  matplotlib_test.py  tickers_data.py  workers.py
src/hportfolio/data/: data.json
src/hportfolio/gui/: main_window.py
src/hportfolio/tests/: test_my_tool.py
