[project]
name = "hportfolio"
dynamic = ["version", "readme"]
dependencies = [
    "PyQt5",
    "pyqtchart",
    "pyqtwebengine",
    "pyqtgraph",
    "matplotlib",
    "yfinance",
    "pandas",
    "numpy",
]

[project.scripts]
hportfolio = "hportfolio.__main__:launch_gui"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "black",
    "python-dotenv",
    "pytest",
    "pytest-cov",
    "pytest-remotedata",
    "types-setuptools",
]


[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.11"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools.package-data]
hportfolio = ["data/data.json"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode=importlib --basetemp=.pytest_tmp --junitxml=report.xml --cov=src --cov-report=term-missing --cov-report=xml:coverage.xml --doctest-continue-on-failure --doctest-modules"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]
branch = true

[tool.ruff]
select = ["ALL"]
ignore = [
    "D105",
    "ICN001",
    "ANN1",
    "ANN2",
    "ANN4",
    "COM812",
    "PLR2004",
    "FBT001",
    "G004",
]
src = ["src"]
line-length = 200

[tool.ruff.per-file-ignores]
"*/tests/*.py" = ["S101"]     # disable bandit's use assert error for tests
"src/*/__main__.py" = ["T20"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
check_untyped_defs = true
exclude = ['^docs/\\.py$']

[tool.black]
line-length = 200
